# Custom-Whisper-Transcribe

./: .gitignore  README.md  pyproject.toml
src/whisper_transcribe/: whisper_transcribe.py
src/whisper_transcribe/helpers/: process_audio_files.py  time_calculations.py  word_grouping.py
